--- a/trunk/jsidplay2/src/main/resources/ui/diskcollection/DiskCollection.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/diskcollection/DiskCollection.fxml
@@ -9,14 +9,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import ui.directory.Directory?>
-<?import javafx.scene.control.ScrollPane?>
+<?import ui.diskcollection.DiskCollectionCellFactory?>
 <?scenebuilder-preview-i18n-resource DiskCollection.properties?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.MenuItem?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<GridPane>
@@ -30,6 +31,9 @@
 		</TitledPane>
 		<TreeView fx:id="fileBrowser" GridPane.rowIndex="1"
 			GridPane.columnIndex="1" minWidth="300">
+			<cellFactory>
+				<DiskCollectionCellFactory />
+			</cellFactory>
 			<contextMenu>
 				<ContextMenu fx:id="contextMenu">
 					<items>
