--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.fxml
@@ -47,34 +47,89 @@
 					<menus>
 						<Menu text="%FILE">
 							<items>
-								<MenuItem text="%LOAD" onAction="#load" fx:id="load" />
+								<MenuItem text="%LOAD" onAction="#load" fx:id="load">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="L"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<MenuItem text="%LOAD_REU_VIDEO" onAction="#video"
-									fx:id="video" />
-								<MenuItem text="%RESET" onAction="#reset" fx:id="reset" />
+									fx:id="video">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="V"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
+								<MenuItem text="%RESET" onAction="#reset" fx:id="reset">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="R"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<SeparatorMenuItem />
-								<MenuItem text="%QUIT" onAction="#quit" fx:id="quit" />
+								<MenuItem text="%QUIT" onAction="#quit" fx:id="quit">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="Q"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 							</items>
 						</Menu>
 						<Menu text="%PLAYER">
 							<items>
 								<CheckMenuItem text="%PAUSE" onAction="#pause"
-									fx:id="pauseContinue" />
+									fx:id="pauseContinue">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="P"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</CheckMenuItem>
 								<MenuItem text="%PREVIOUS" onAction="#previousSong"
-									fx:id="previous" />
-								<MenuItem text="%NEXT" onAction="#nextSong" fx:id="next" />
+									fx:id="previous">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="MINUS"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
+								<MenuItem text="%NEXT" onAction="#nextSong" fx:id="next">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="PLUS"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<RadioMenuItem text="%NORMAL_SPEED" selected="true"
 									toggleGroup="$playSpeedGroup" onAction="#playNormalSpeed"
-									fx:id="normalSpeed" />
+									fx:id="normalSpeed">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="COMMA"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</RadioMenuItem>
 								<RadioMenuItem text="%FAST_FORWARD" toggleGroup="$playSpeedGroup"
-									onAction="#playFastForward" fx:id="fastForward" />
-								<MenuItem text="%STOP" onAction="#stopSong" fx:id="stop" />
+									onAction="#playFastForward" fx:id="fastForward">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="DECIMAL"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</RadioMenuItem>
+								<MenuItem text="%STOP" onAction="#stopSong" fx:id="stop">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="T"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 							</items>
 						</Menu>
 						<Menu text="%HARDCOPY">
 							<MenuItem text="%HARDCOPY_GIF" onAction="#doHardcopyGif" />
 							<MenuItem text="%HARDCOPY_JPG" onAction="#doHardcopyJpg" />
 							<MenuItem text="%HARDCOPY_PNG" onAction="#doHardcopyPng"
-								fx:id="hardcopyPng" />
+								fx:id="hardcopyPng">
+								<accelerator>
+									<KeyCodeCombination alt="UP" code="N"
+										control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+								</accelerator>
+							</MenuItem>
 						</Menu>
 						<Menu text="%OPTIONS">
 							<Menu text="%VIDEO_STANDARD">
@@ -96,7 +151,12 @@
 								<MenuItem text="%STOP" onAction="#stop" />
 								<MenuItem text="%RESET_COUNTER" onAction="#resetCounter" />
 								<MenuItem text="%INSERT_TAPE" onAction="#insertTape"
-									fx:id="insertTape" />
+									fx:id="insertTape">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="DIGIT1"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<MenuItem text="%EJECT_TAPE" onAction="#ejectTape" />
 							</Menu>
 							<Menu text="%FLOPPY">
@@ -131,7 +191,12 @@
 								<CheckMenuItem text="%8K_RAM_EXPANSION_0XA000"
 									onAction="#expansion0xA000" fx:id="expandA000" />
 								<MenuItem text="%INSERT_DISK" onAction="#insertDisk"
-									fx:id="insertDisk" />
+									fx:id="insertDisk">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="DIGIT8"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<MenuItem text="%EJECT_DISK" onAction="#ejectDisk" />
 								<MenuItem text="%RESET_DRIVE" onAction="#resetDrive" />
 							</Menu>
@@ -141,7 +206,12 @@
 							</Menu>
 							<Menu text="%CARTRIDGE">
 								<MenuItem text="%INSERT_CARTRIDGE" onAction="#insertCartridge"
-									fx:id="insertCartridge" />
+									fx:id="insertCartridge">
+									<accelerator>
+										<KeyCodeCombination alt="UP" code="C"
+											control="DOWN" meta="UP" shift="UP" shortcut="DOWN" />
+									</accelerator>
+								</MenuItem>
 								<Menu text="%GEORAM">
 									<MenuItem text="%INSERT_GEORAM" onAction="#insertGeoRAM" />
 									<MenuItem text="%INSERT_GEORAM_(64KB)" onAction="#insertGeoRAM64" />
