--- a/jsidplay2/src/main/resources/ui/gamebase/GameBase.fxml
+++ b/jsidplay2/src/main/resources/ui/gamebase/GameBase.fxml
@@ -19,7 +19,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml">
 	<GridPane AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10"
 		AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
-		<CheckBox text="%ENABLE_GAMEBASE" fx:id="enableGameBase"
+		<CheckBox text="%AUTO_CONFIGURATION" fx:id="enableGameBase"
 			onAction="#doEnableGameBase" GridPane.rowIndex="0"
 			GridPane.columnIndex="0" GridPane.columnSpan="2" />
 		<HBox GridPane.rowIndex="1" GridPane.columnIndex="0">
