--- a/trunk/jsidplay2/src/main/resources/ui/soundsettings/SoundSettings.fxml
+++ b/trunk/jsidplay2/src/main/resources/ui/soundsettings/SoundSettings.fxml
@@ -20,7 +20,7 @@
 <?import javafx.collections.FXCollections?> 
 <?import java.lang.String?>
 <?import java.lang.Integer?>
-<?import resid_builder.resid.ISIDDefs.SamplingMethod?>
+<?import resid_builder.resid.SamplingMethod?>
 <?scenebuilder-preview-i18n-resource SoundSettings.properties?>
 
 <Scene xmlns:fx="http://javafx.com/fxml">
