--- a/jsidplay2/src/main/resources/ui/about/About.fxml
+++ b/jsidplay2/src/main/resources/ui/about/About.fxml
@@ -4,9 +4,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
+<?import java.net.URL?>
 <?scenebuilder-preview-i18n-resource About.properties?>
 
 <Scene xmlns:fx="http://javafx.com/fxml" width="1024" height="768">
+	<stylesheets>
+		<URL value="@About.css" />
+	</stylesheets>
 	<BorderPane>
 		<center>
 			<TextArea
